[metadata]
name = monitorlib
version = attr: monitorlib.__version__
author = Anthony Monthe (ZuluPro)
author-email = contact@cloud-mercato.com
url = https://github.com/cloudmercato/monitorlib
project_urls =
summary = attr: monitorlib.__doc__
description-file = file: README.rst
description-content-type = text/x-rst; charset=UTF-8

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: System :: Archiving :: Packaging

keywords = monitoring

[bdist_wheel]
universal = 1

[options]
py_modules=monitorlib
zip_safe = False
include_package_data = True
setup_requires =
    setuptools
install_requires = psutil
